fix z-index

--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -24,7 +24,7 @@ i + span {
     bottom: 999px;
     left: 0;
     right: 0;
-    z-index: 1;
+    z-index: 9999;
     background-color: #ddd;
 
     iframe {
