--- a/public/style.css
+++ b/public/style.css
@@ -5845,7 +5845,7 @@ i + span {
     bottom: 999px;
     left: 0;
     right: 0;
-    z-index: 1;
+    z-index: 9999;
     background-color: #ddd; }
     #appView #contentAppShow iframe {
       width: 100%;
